feat: add demo landing page and update homepage link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <a href="#" class="logo">Hellfire Hackers</a>
             <ul class="nav-links">
-                <li><a href="dashboard.html" class="cta-button">Demo</a></li>
+                <li><a href="demo-landing.html" class="cta-button">Demo</a></li>
                 <li><a href="#problem">Problem</a></li>
                 <li><a href="#solution">Solution</a></li>
                 <li><a href="#features">Features</a></li>
